@@ -4,9 +4,11 @@ Changes to 1.0.6
 * Draw solutions for vector fields
 * Add VectorfieldDrawSolution and VectorfieldClearSolutions
 * AskString now allows setting a default
+* An icon for the plot button
+* Read only files are handled properly
+* Fix flicker when plotting
 * Fix line plot scale precision in case the x and y axis have very different
   scales
-* An icon for the plot button
 * Remove dependence on libgnome/ui
 * Translation updates
 
